gitlight.css
/* gitlight: status */

.gitlight-status .merge-conflict li button:first-child {
  background-color: #ca2d2d;
  font-weight: bold;
}

.gitlight-status .staged li button:first-child {
  background-color: #216a36;
  font-weight: bold;
}

.gitlight-status .not-staged li button:first-child {
  background-color: #6a6721;
  font-weight: bold;
}

.gitlight-status .untracked li button:first-child {
  background-color: #21626a;
  font-weight: bold;
}

.gitlight-status .not-staged li button.checkout {
  margin-left: 32px;
  background-color: #6a2f21;
}

.gitlight-status .untracked li button.delete {
  margin-left: 32px;
  background-color: #6a2f21;
}

.commit-form {
  margin-top: 10px;
  margin-bottom: 10px;
}

textarea {
  color: var(highlight-fg);
  background: var(highlight-bg);
  border: none;
  font-family: inherit;
  font-size: inherit;
}



/* gitlight: branches */

.gitlight-branches table td {
  padding-left: 5px;
  padding-right: 5px;
}

.gitlight-branches table td.pull button  {
  background-color: #367bc9;
}

.gitlight-branches table td.merge button  {
  background-color: #114682;
}

.gitlight-branches table td.current button  {
  background-color: #7e9100;
}

.gitlight-branches table td.not-current button  {
  background-color: #005000;
}

.gitlight-branches table td.new-branch button  {
  background-color: #007c00;
}

.gitlight-branches table td.push button  {
  background-color: #c05623;
}



/* gitlight: diff */


.gitlight-diff table {
  margin-bottom: 30px;
}

.gitlight-diff table tr.where td {
  padding-top: 10px;
  text-align: center;
}

.gitlight-diff table tr.context {
  background-color: #737373;
}

.gitlight-diff table tr.changed td.left {

  background-color: #2964db;
}

.gitlight-diff table tr.changed td.right {
  background-color: #468e2a;
}

